# help-compendium

./: CHANGELOGS.md  README.md
manuals/: README.md
manuals/software-development/programming-languages/python/libraries/: README.md
manuals/software-development/programming-languages/python/libraries/built-in/: BeautifulSoup4.md  argparse.md  asyncio.md  binascii.md  hashlib.md  html.md  json.md  paramiko.md  pip.md  random.md  re.md  requests.md  ruamel.yaml.md  scapy.md  sqlite3.md  sys.md  tensorflow.md  threading.md  toml.md  tomllib.md
manuals/software-development/programming-languages/python/libraries/built-in/PyInstaller/: README.md  Specfile.md  manual.md  setup.md
manuals/software-development/programming-languages/python/libraries/built-in/flask/: README.md  manual.md  setup.md
manuals/software-development/programming-languages/python/libraries/built-in/multiprocessing/: manual.md
manuals/software-development/programming-languages/python/libraries/built-in/mysql-connector-python/: README.md  manual.md  setup.md
manuals/software-development/programming-languages/python/libraries/built-in/netfilterqueue/: README.md  manual.md
manuals/software-development/programming-languages/python/libraries/built-in/os/: README.md  manual.md  setup.md
manuals/software-development/programming-languages/python/libraries/built-in/platform/: README.md  manual.md  setup.md
manuals/software-development/programming-languages/python/libraries/built-in/pycryptodome/: README.md  (+1 more)
tools/compendium-reader/: CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
tools/compendium-reader/src/computil/app/compreader/: main.py
tools/compendium-reader/src/computil/core/: network.py
(+24 files in other folders)
